parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> top
Rule 1     top -> <empty>
Rule 2     top -> stmt_list
Rule 3     top -> top func_decl stmt_list_opt
Rule 4     top -> top func_decl end semi_opt
Rule 5     top -> top func_decl stmt_list end semi_opt
Rule 6     semi_opt -> <empty>
Rule 7     semi_opt -> semi_opt SEMI
Rule 8     semi_opt -> semi_opt COMMA
Rule 9     stmt -> continue_stmt
Rule 10    stmt -> break_stmt
Rule 11    stmt -> expr_stmt
Rule 12    stmt -> global_stmt
Rule 13    stmt -> command
Rule 14    stmt -> for_stmt
Rule 15    stmt -> if_stmt
Rule 16    stmt -> null_stmt
Rule 17    stmt -> return_stmt
Rule 18    stmt -> switch_stmt
Rule 19    stmt -> try_catch
Rule 20    stmt -> while_stmt
Rule 21    arg1 -> STRING
Rule 22    arg1 -> NUMBER
Rule 23    arg1 -> IDENTIFIER
Rule 24    arg1 -> GLOBAL
Rule 25    args -> arg1
Rule 26    args -> args arg1
Rule 27    command -> IDENTIFIER args SEMI
Rule 28    global_list -> IDENTIFIER
Rule 29    global_list -> global_list IDENTIFIER
Rule 30    global_stmt -> GLOBAL global_list SEMI
Rule 31    global_stmt -> GLOBAL IDENTIFIER EQUALS expr SEMI
Rule 32    return_stmt -> RETURN SEMI
Rule 33    continue_stmt -> CONTINUE SEMI
Rule 34    break_stmt -> BREAK SEMI
Rule 35    switch_stmt -> SWITCH expr semi_opt case_list end
Rule 36    case_list -> <empty>
Rule 37    case_list -> CASE expr sep stmt_list_opt case_list
Rule 38    case_list -> CASE expr error stmt_list_opt case_list
Rule 39    case_list -> OTHERWISE stmt_list
Rule 40    try_catch -> TRY stmt_list CATCH stmt_list end
Rule 41    try_catch -> TRY stmt_list end
Rule 42    null_stmt -> SEMI
Rule 43    null_stmt -> COMMA
Rule 44    func_decl -> FUNCTION IDENTIFIER args_opt SEMI
Rule 45    func_decl -> FUNCTION ret EQUALS IDENTIFIER args_opt SEMI
Rule 46    args_opt -> <empty>
Rule 47    args_opt -> LBRACKET RBRACKET
Rule 48    args_opt -> LBRACKET expr_list RBRACKET
Rule 49    ret -> IDENTIFIER
Rule 50    ret -> LBRACKET RBRACKET
Rule 51    ret -> LBRACKET expr_list RBRACKET
Rule 52    stmt_list_opt -> <empty>
Rule 53    stmt_list_opt -> stmt_list
Rule 54    stmt_list -> stmt
Rule 55    stmt_list -> stmt_list stmt
Rule 56    concat_list -> expr_list SEMI expr_list
Rule 57    concat_list -> concat_list SEMI expr_list
Rule 58    expr_list -> exprs
Rule 59    expr_list -> exprs COMMA
Rule 60    exprs -> expr
Rule 61    exprs -> exprs COMMA expr
Rule 62    expr_stmt -> expr_list SEMI
Rule 63    while_stmt -> WHILE expr SEMI stmt_list end
Rule 64    sep -> COMMA
Rule 65    sep -> SEMI
Rule 66    if_stmt -> IF expr sep stmt_list_opt elseif_stmt end
Rule 67    if_stmt -> IF expr error stmt_list_opt elseif_stmt end
Rule 68    elseif_stmt -> <empty>
Rule 69    elseif_stmt -> ELSE stmt_list_opt
Rule 70    elseif_stmt -> ELSEIF expr sep stmt_list_opt elseif_stmt
Rule 71    for_stmt -> FOR IDENTIFIER EQUALS expr SEMI stmt_list end
Rule 72    for_stmt -> FOR LBRACKET IDENTIFIER EQUALS expr RBRACKET SEMI stmt_list end
Rule 73    for_stmt -> FOR matrix EQUALS expr SEMI stmt_list end
Rule 74    number -> NUMBER
Rule 75    expr -> IDENTIFIER
Rule 76    expr -> number
Rule 77    expr -> string
Rule 78    expr -> colon
Rule 79    expr -> NOTEQUAL
Rule 80    expr -> NOT
Rule 81    expr -> matrix
Rule 82    expr -> cellarray
Rule 83    expr -> expr2
Rule 84    expr -> expr1
Rule 85    end -> END
Rule 86    string -> STRING
Rule 87    colon -> COLON
Rule 88    expr1 -> MINUS expr
Rule 89    expr1 -> PLUS expr
Rule 90    expr1 -> NOTEQUAL expr
Rule 91    cellarray -> LBRACE RBRACE
Rule 92    cellarray -> LBRACE expr_list RBRACE
Rule 93    cellarray -> LBRACE concat_list RBRACE
Rule 94    cellarray -> LBRACE concat_list SEMI RBRACE
Rule 95    matrix -> LBRACKET RBRACKET
Rule 96    matrix -> LBRACKET concat_list RBRACKET
Rule 97    matrix -> LBRACKET concat_list SEMI RBRACKET
Rule 98    matrix -> LBRACKET expr_list RBRACKET
Rule 99    matrix -> LBRACKET expr_list SEMI RBRACKET
Rule 100   expr -> LBRACKET expr RBRACKET
Rule 101   expr -> expr FIELD
Rule 102   expr -> expr TRANSPOSE
Rule 103   expr -> expr LBRACE expr_list RBRACE
Rule 104   expr -> expr LBRACE RBRACE
Rule 105   expr -> expr LBRACKET expr_list RBRACKET
Rule 106   expr -> expr LBRACKET RBRACKET
Rule 107   expr2 -> expr AND expr
Rule 108   expr2 -> expr ANDAND expr
Rule 109   expr2 -> expr LDIV expr
Rule 110   expr2 -> expr COLON expr
Rule 111   expr2 -> expr DIV expr
Rule 112   expr2 -> expr DOT expr
Rule 113   expr2 -> expr DOTDIV expr
Rule 114   expr2 -> expr DOTEXP expr
Rule 115   expr2 -> expr DOTMUL expr
Rule 116   expr2 -> expr EQUALEQUAL expr
Rule 117   expr2 -> expr EXP expr
Rule 118   expr2 -> expr GREATEREQUAL expr
Rule 119   expr2 -> expr GREATERTHAN expr
Rule 120   expr2 -> expr LESSEQUAL expr
Rule 121   expr2 -> expr LESSTHAN expr
Rule 122   expr2 -> expr MINUS expr
Rule 123   expr2 -> expr TIMES expr
Rule 124   expr2 -> expr NOTEQUAL expr
Rule 125   expr2 -> expr OR expr
Rule 126   expr2 -> expr OROR expr
Rule 127   expr2 -> expr PLUS expr
Rule 128   expr2 -> expr EQUALS expr
Rule 129   expr2 -> expr OREQUALS expr

Terminals, with rules where they appear

AND                  : 107
ANDAND               : 108
BREAK                : 34
CASE                 : 37 38
CATCH                : 40
COLON                : 87 110
COMMA                : 8 43 59 61 64
CONTINUE             : 33
DIV                  : 111
DOT                  : 112
DOTDIV               : 113
DOTEXP               : 114
DOTMUL               : 115
ELSE                 : 69
ELSEIF               : 70
END                  : 85
EQUALEQUAL           : 116
EQUALS               : 31 45 71 72 73 128
EXP                  : 117
FIELD                : 101
FOR                  : 71 72 73
FUNCTION             : 44 45
GLOBAL               : 24 30 31
GREATEREQUAL         : 118
GREATERTHAN          : 119
IDENTIFIER           : 23 27 28 29 31 44 45 49 71 72 75
IF                   : 66 67
LBRACE               : 91 92 93 94 103 104
LBRACKET             : 47 48 50 51 72 95 96 97 98 99 100 105 106
LDIV                 : 109
LESSEQUAL            : 120
LESSTHAN             : 121
MINUS                : 88 122
NOT                  : 80
NOTEQUAL             : 79 90 124
NUMBER               : 22 74
OR                   : 125
OREQUALS             : 129
OROR                 : 126
OTHERWISE            : 39
PLUS                 : 89 127
RBRACE               : 91 92 93 94 103 104
RBRACKET             : 47 48 50 51 72 95 96 97 98 99 100 105 106
RETURN               : 32
SEMI                 : 7 27 30 31 32 33 34 42 44 45 56 57 62 63 65 71 72 73 94 97 99
STRING               : 21 86
SWITCH               : 35
TIMES                : 123
TRANSPOSE            : 102
TRY                  : 40 41
WHILE                : 63
error                : 38 67

Nonterminals, with rules where they appear

arg1                 : 25 26
args                 : 26 27
args_opt             : 44 45
break_stmt           : 10
case_list            : 35 37 38
cellarray            : 82
colon                : 78
command              : 13
concat_list          : 57 93 94 96 97
continue_stmt        : 9
elseif_stmt          : 66 67 70
end                  : 4 5 35 40 41 63 66 67 71 72 73
expr                 : 31 35 37 38 60 61 63 66 67 70 71 72 73 88 89 90 100 101 102 103 104 105 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129
expr1                : 84
expr2                : 83
expr_list            : 48 51 56 56 57 62 92 98 99 103 105
expr_stmt            : 11
exprs                : 58 59 61
for_stmt             : 14
func_decl            : 3 4 5
global_list          : 29 30
global_stmt          : 12
if_stmt              : 15
matrix               : 73 81
null_stmt            : 16
number               : 76
ret                  : 45
return_stmt          : 17
semi_opt             : 4 5 7 8 35
sep                  : 37 66 70
stmt                 : 54 55
stmt_list            : 2 5 39 40 40 41 53 55 63 71 72 73
stmt_list_opt        : 3 37 38 66 67 69 70
string               : 77
switch_stmt          : 18
top                  : 3 4 5 0
try_catch            : 19
while_stmt           : 20

Parsing method: LALR

state 0

    (0) S' -> . top
    (1) top -> .
    (2) top -> . stmt_list
    (3) top -> . top func_decl stmt_list_opt
    (4) top -> . top func_decl end semi_opt
    (5) top -> . top func_decl stmt_list end semi_opt
    (54) stmt_list -> . stmt
    (55) stmt_list -> . stmt_list stmt
    (9) stmt -> . continue_stmt
    (10) stmt -> . break_stmt
    (11) stmt -> . expr_stmt
    (12) stmt -> . global_stmt
    (13) stmt -> . command
    (14) stmt -> . for_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . null_stmt
    (17) stmt -> . return_stmt
    (18) stmt -> . switch_stmt
    (19) stmt -> . try_catch
    (20) stmt -> . while_stmt
    (33) continue_stmt -> . CONTINUE SEMI
    (34) break_stmt -> . BREAK SEMI
    (62) expr_stmt -> . expr_list SEMI
    (30) global_stmt -> . GLOBAL global_list SEMI
    (31) global_stmt -> . GLOBAL IDENTIFIER EQUALS expr SEMI
    (27) command -> . IDENTIFIER args SEMI
    (71) for_stmt -> . FOR IDENTIFIER EQUALS expr SEMI stmt_list end
    (72) for_stmt -> . FOR LBRACKET IDENTIFIER EQUALS expr RBRACKET SEMI stmt_list end
    (73) for_stmt -> . FOR matrix EQUALS expr SEMI stmt_list end
    (66) if_stmt -> . IF expr sep stmt_list_opt elseif_stmt end
    (67) if_stmt -> . IF expr error stmt_list_opt elseif_stmt end
    (42) null_stmt -> . SEMI
    (43) null_stmt -> . COMMA
    (32) return_stmt -> . RETURN SEMI
    (35) switch_stmt -> . SWITCH expr semi_opt case_list end
    (40) try_catch -> . TRY stmt_list CATCH stmt_list end
    (41) try_catch -> . TRY stmt_list end
    (63) while_stmt -> . WHILE expr SEMI stmt_list end
    (58) expr_list -> . exprs
    (59) expr_list -> . exprs COMMA
    (60) exprs -> . expr
    (61) exprs -> . exprs COMMA expr
    (75) expr -> . IDENTIFIER
    (76) expr -> . number
    (77) expr -> . string
    (78) expr -> . colon
    (79) expr -> . NOTEQUAL
    (80) expr -> . NOT
    (81) expr -> . matrix
    (82) expr -> . cellarray
    (83) expr -> . expr2
    (84) expr -> . expr1
    (100) expr -> . LBRACKET expr RBRACKET
    (101) expr -> . expr FIELD
    (102) expr -> . expr TRANSPOSE
    (103) expr -> . expr LBRACE expr_list RBRACE
    (104) expr -> . expr LBRACE RBRACE
    (105) expr -> . expr LBRACKET expr_list RBRACKET
    (106) expr -> . expr LBRACKET RBRACKET
    (74) number -> . NUMBER
    (86) string -> . STRING
    (87) colon -> . COLON
    (95) matrix -> . LBRACKET RBRACKET
    (96) matrix -> . LBRACKET concat_list RBRACKET
    (97) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (98) matrix -> . LBRACKET expr_list RBRACKET
    (99) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (91) cellarray -> . LBRACE RBRACE
    (92) cellarray -> . LBRACE expr_list RBRACE
    (93) cellarray -> . LBRACE concat_list RBRACE
    (94) cellarray -> . LBRACE concat_list SEMI RBRACE
    (107) expr2 -> . expr AND expr
    (108) expr2 -> . expr ANDAND expr
    (109) expr2 -> . expr LDIV expr
    (110) expr2 -> . expr COLON expr
    (111) expr2 -> . expr DIV expr
    (112) expr2 -> . expr DOT expr
    (113) expr2 -> . expr DOTDIV expr
    (114) expr2 -> . expr DOTEXP expr
    (115) expr2 -> . expr DOTMUL expr
    (116) expr2 -> . expr EQUALEQUAL expr
    (117) expr2 -> . expr EXP expr
    (118) expr2 -> . expr GREATEREQUAL expr
    (119) expr2 -> . expr GREATERTHAN expr
    (120) expr2 -> . expr LESSEQUAL expr
    (121) expr2 -> . expr LESSTHAN expr
    (122) expr2 -> . expr MINUS expr
    (123) expr2 -> . expr TIMES expr
    (124) expr2 -> . expr NOTEQUAL expr
    (125) expr2 -> . expr OR expr
    (126) expr2 -> . expr OROR expr
    (127) expr2 -> . expr PLUS expr
    (128) expr2 -> . expr EQUALS expr
    (129) expr2 -> . expr OREQUALS expr
    (88) expr1 -> . MINUS expr
    (89) expr1 -> . PLUS expr
    (90) expr1 -> . NOTEQUAL expr

    FUNCTION        reduce using rule 1 (top -> .)
    $end            reduce using rule 1 (top -> .)
    CONTINUE        shift and go to state 42
    BREAK           shift and go to state 40
    GLOBAL          shift and go to state 37
    IDENTIFIER      shift and go to state 4
    FOR             shift and go to state 22
    IF              shift and go to state 28
    SEMI            shift and go to state 30
    COMMA           shift and go to state 15
    RETURN          shift and go to state 43
    SWITCH          shift and go to state 27
    TRY             shift and go to state 14
    WHILE           shift and go to state 26
    NOTEQUAL        shift and go to state 33
    NOT             shift and go to state 24
    LBRACKET        shift and go to state 18
    NUMBER          shift and go to state 25
    STRING          shift and go to state 45
    COLON           shift and go to state 29
    LBRACE          shift and go to state 44
    MINUS           shift and go to state 2
    PLUS            shift and go to state 11

    try_catch                      shift and go to state 23
    for_stmt                       shift and go to state 1
    while_stmt                     shift and go to state 3
    expr_stmt                      shift and go to state 5
    global_stmt                    shift and go to state 6
    break_stmt                     shift and go to state 7
    exprs                          shift and go to state 8
    if_stmt                        shift and go to state 9
    matrix                         shift and go to state 10
    return_stmt                    shift and go to state 31
    null_stmt                      shift and go to state 35
    stmt                           shift and go to state 12
    expr1                          shift and go to state 13
    expr                           shift and go to state 32
    switch_stmt                    shift and go to state 34
    expr_list                      shift and go to state 21
    expr2                          shift and go to state 36
    continue_stmt                  shift and go to state 38
    string                         shift and go to state 39
    number                         shift and go to state 16
    colon                          shift and go to state 41
    cellarray                      shift and go to state 17
    command                        shift and go to state 19
    top                            shift and go to state 20
    stmt_list                      shift and go to state 46

state 1

    (14) stmt -> for_stmt .

    END             reduce using rule 14 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 14 (stmt -> for_stmt .)
    BREAK           reduce using rule 14 (stmt -> for_stmt .)
    GLOBAL          reduce using rule 14 (stmt -> for_stmt .)
    IDENTIFIER      reduce using rule 14 (stmt -> for_stmt .)
    FOR             reduce using rule 14 (stmt -> for_stmt .)
    IF              reduce using rule 14 (stmt -> for_stmt .)
    SEMI            reduce using rule 14 (stmt -> for_stmt .)
    COMMA           reduce using rule 14 (stmt -> for_stmt .)
    RETURN          reduce using rule 14 (stmt -> for_stmt .)
    SWITCH          reduce using rule 14 (stmt -> for_stmt .)
    TRY             reduce using rule 14 (stmt -> for_stmt .)
    WHILE           reduce using rule 14 (stmt -> for_stmt .)
    NOTEQUAL        reduce using rule 14 (stmt -> for_stmt .)
    NOT             reduce using rule 14 (stmt -> for_stmt .)
    LBRACKET        reduce using rule 14 (stmt -> for_stmt .)
    NUMBER          reduce using rule 14 (stmt -> for_stmt .)
    STRING          reduce using rule 14 (stmt -> for_stmt .)
    COLON           reduce using rule 14 (stmt -> for_stmt .)
    LBRACE          reduce using rule 14 (stmt -> for_stmt .)
    MINUS           reduce using rule 14 (stmt -> for_stmt .)
    PLUS            reduce using rule 14 (stmt -> for_stmt .)
    FUNCTION        reduce using rule 14 (stmt -> for_stmt .)
    $end            reduce using rule 14 (stmt -> for_stmt .)
    ELSE            reduce using rule 14 (stmt -> for_stmt .)
    ELSEIF          reduce using rule 14 (stmt -> for_stmt .)
    CATCH           reduce using rule 14 (stmt -> for_stmt .)
    CASE            reduce using rule 14 (stmt -> for_stmt .)
    OTHERWISE       reduce using rule 14 (stmt -> for_stmt .)


state 2

    (88) expr1 -> MINUS . expr
    (75) expr -> . IDENTIFIER
    (76) expr -> . number
    (77) expr -> . string
    (78) expr -> . colon
    (79) expr -> . NOTEQUAL
    (80) expr -> . NOT
    (81) expr -> . matrix
    (82) expr -> . cellarray
    (83) expr -> . expr2
    (84) expr -> . expr1
    (100) expr -> . LBRACKET expr RBRACKET
    (101) expr -> . expr FIELD
    (102) expr -> . expr TRANSPOSE
    (103) expr -> . expr LBRACE expr_list RBRACE
    (104) expr -> . expr LBRACE RBRACE
    (105) expr -> . expr LBRACKET expr_list RBRACKET
    (106) expr -> . expr LBRACKET RBRACKET
    (74) number -> . NUMBER
    (86) string -> . STRING
    (87) colon -> . COLON
    (95) matrix -> . LBRACKET RBRACKET
    (96) matrix -> . LBRACKET concat_list RBRACKET
    (97) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (98) matrix -> . LBRACKET expr_list RBRACKET
    (99) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (91) cellarray -> . LBRACE RBRACE
    (92) cellarray -> . LBRACE expr_list RBRACE
    (93) cellarray -> . LBRACE concat_list RBRACE
    (94) cellarray -> . LBRACE concat_list SEMI RBRACE
    (107) expr2 -> . expr AND expr
    (108) expr2 -> . expr ANDAND expr
    (109) expr2 -> . expr LDIV expr
    (110) expr2 -> . expr COLON expr
    (111) expr2 -> . expr DIV expr
    (112) expr2 -> . expr DOT expr
    (113) expr2 -> . expr DOTDIV expr
    (114) expr2 -> . expr DOTEXP expr
    (115) expr2 -> . expr DOTMUL expr
    (116) expr2 -> . expr EQUALEQUAL expr
    (117) expr2 -> . expr EXP expr
    (118) expr2 -> . expr GREATEREQUAL expr
    (119) expr2 -> . expr GREATERTHAN expr
    (120) expr2 -> . expr LESSEQUAL expr
    (121) expr2 -> . expr LESSTHAN expr
    (122) expr2 -> . expr MINUS expr
    (123) expr2 -> . expr TIMES expr
    (124) expr2 -> . expr NOTEQUAL expr
    (125) expr2 -> . expr OR expr
    (126) expr2 -> . expr OROR expr
    (127) expr2 -> . expr PLUS expr
    (128) expr2 -> . expr EQUALS expr
    (129) expr2 -> . expr OREQUALS expr
    (88) expr1 -> . MINUS expr
    (89) expr1 -> . PLUS expr
    (90) expr1 -> . NOTEQUAL expr

    IDENTIFIER      shift and go to state 48
    NOTEQUAL        shift and go to state 33
    NOT             shift and go to state 24
    LBRACKET        shift and go to state 18
    NUMBER          shift and go to state 25
    STRING          shift and go to state 45
    COLON           shift and go to state 29
    LBRACE          shift and go to state 44
    MINUS           shift and go to state 2
    PLUS            shift and go to state 11

    expr                           shift and go to state 47
    cellarray                      shift and go to state 17
    expr2                          shift and go to state 36
    matrix                         shift and go to state 10
    colon                          shift and go to state 41
    string                         shift and go to state 39
    number                         shift and go to state 16
    expr1                          shift and go to state 13

state 3

    (20) stmt -> while_stmt .

    END             reduce using rule 20 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 20 (stmt -> while_stmt .)
    BREAK           reduce using rule 20 (stmt -> while_stmt .)
    GLOBAL          reduce using rule 20 (stmt -> while_stmt .)
    IDENTIFIER      reduce using rule 20 (stmt -> while_stmt .)
    FOR             reduce using rule 20 (stmt -> while_stmt .)
    IF              reduce using rule 20 (stmt -> while_stmt .)
    SEMI            reduce using rule 20 (stmt -> while_stmt .)
    COMMA           reduce using rule 20 (stmt -> while_stmt .)
    RETURN          reduce using rule 20 (stmt -> while_stmt .)
    SWITCH          reduce using rule 20 (stmt -> while_stmt .)
    TRY             reduce using rule 20 (stmt -> while_stmt .)
    WHILE           reduce using rule 20 (stmt -> while_stmt .)
    NOTEQUAL        reduce using rule 20 (stmt -> while_stmt .)
    NOT             reduce using rule 20 (stmt -> while_stmt .)
    LBRACKET        reduce using rule 20 (stmt -> while_stmt .)
    NUMBER          reduce using rule 20 (stmt -> while_stmt .)
    STRING          reduce using rule 20 (stmt -> while_stmt .)
    COLON           reduce using rule 20 (stmt -> while_stmt .)
    LBRACE          reduce using rule 20 (stmt -> while_stmt .)
    MINUS           reduce using rule 20 (stmt -> while_stmt .)
    PLUS            reduce using rule 20 (stmt -> while_stmt .)
    FUNCTION        reduce using rule 20 (stmt -> while_stmt .)
    $end            reduce using rule 20 (stmt -> while_stmt .)
    ELSE            reduce using rule 20 (stmt -> while_stmt .)
    ELSEIF          reduce using rule 20 (stmt -> while_stmt .)
    CATCH           reduce using rule 20 (stmt -> while_stmt .)
    CASE            reduce using rule 20 (stmt -> while_stmt .)
    OTHERWISE       reduce using rule 20 (stmt -> while_stmt .)


state 4

    (27) command -> IDENTIFIER . args SEMI
    (75) expr -> IDENTIFIER .
    (25) args -> . arg1
    (26) args -> . args arg1
    (21) arg1 -> . STRING
    (22) arg1 -> . NUMBER
    (23) arg1 -> . IDENTIFIER
    (24) arg1 -> . GLOBAL

    FIELD           reduce using rule 75 (expr -> IDENTIFIER .)
    TRANSPOSE       reduce using rule 75 (expr -> IDENTIFIER .)
    LBRACE          reduce using rule 75 (expr -> IDENTIFIER .)
    LBRACKET        reduce using rule 75 (expr -> IDENTIFIER .)
    AND             reduce using rule 75 (expr -> IDENTIFIER .)
    ANDAND          reduce using rule 75 (expr -> IDENTIFIER .)
    LDIV            reduce using rule 75 (expr -> IDENTIFIER .)
    COLON           reduce using rule 75 (expr -> IDENTIFIER .)
    DIV             reduce using rule 75 (expr -> IDENTIFIER .)
    DOT             reduce using rule 75 (expr -> IDENTIFIER .)
    DOTDIV          reduce using rule 75 (expr -> IDENTIFIER .)
    DOTEXP          reduce using rule 75 (expr -> IDENTIFIER .)
    DOTMUL          reduce using rule 75 (expr -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 75 (expr -> IDENTIFIER .)
    EXP             reduce using rule 75 (expr -> IDENTIFIER .)
    GREATEREQUAL    reduce using rule 75 (expr -> IDENTIFIER .)
    GREATERTHAN     reduce using rule 75 (expr -> IDENTIFIER .)
    LESSEQUAL       reduce using rule 75 (expr -> IDENTIFIER .)
    LESSTHAN        reduce using rule 75 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 75 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 75 (expr -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 75 (expr -> IDENTIFIER .)
    OR              reduce using rule 75 (expr -> IDENTIFIER .)
    OROR            reduce using rule 75 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 75 (expr -> IDENTIFIER .)
    EQUALS          reduce using rule 75 (expr -> IDENTIFIER .)
    OREQUALS        reduce using rule 75 (expr -> IDENTIFIER .)
    COMMA           reduce using rule 75 (expr -> IDENTIFIER .)
    SEMI            reduce using rule 75 (expr -> IDENTIFIER .)
    STRING          shift and go to state 54
    NUMBER          shift and go to state 51
    IDENTIFIER      shift and go to state 49
    GLOBAL          shift and go to state 52

    arg1                           shift and go to state 50
    args                           shift and go to state 53

state 5

    (11) stmt -> expr_stmt .

    END             reduce using rule 11 (stmt -> expr_stmt .)
    CONTINUE        reduce using rule 11 (stmt -> expr_stmt .)
    BREAK           reduce using rule 11 (stmt -> expr_stmt .)
    GLOBAL          reduce using rule 11 (stmt -> expr_stmt .)
    IDENTIFIER      reduce using rule 11 (stmt -> expr_stmt .)
    FOR             reduce using rule 11 (stmt -> expr_stmt .)
    IF              reduce using rule 11 (stmt -> expr_stmt .)
    SEMI            reduce using rule 11 (stmt -> expr_stmt .)
    COMMA           reduce using rule 11 (stmt -> expr_stmt .)
    RETURN          reduce using rule 11 (stmt -> expr_stmt .)
    SWITCH          reduce using rule 11 (stmt -> expr_stmt .)
    TRY             reduce using rule 11 (stmt -> expr_stmt .)
    WHILE           reduce using rule 11 (stmt -> expr_stmt .)
    NOTEQUAL        reduce using rule 11 (stmt -> expr_stmt .)
    NOT             reduce using rule 11 (stmt -> expr_stmt .)
    LBRACKET        reduce using rule 11 (stmt -> expr_stmt .)
    NUMBER          reduce using rule 11 (stmt -> expr_stmt .)
    STRING          reduce using rule 11 (stmt -> expr_stmt .)
    COLON           reduce using rule 11 (stmt -> expr_stmt .)
    LBRACE          reduce using rule 11 (stmt -> expr_stmt .)
    MINUS           reduce using rule 11 (stmt -> expr_stmt .)
    PLUS            reduce using rule 11 (stmt -> expr_stmt .)
    FUNCTION        reduce using rule 11 (stmt -> expr_stmt .)
    $end            reduce using rule 11 (stmt -> expr_stmt .)
    ELSE            reduce using rule 11 (stmt -> expr_stmt .)
    ELSEIF          reduce using rule 11 (stmt -> expr_stmt .)
    CATCH           reduce using rule 11 (stmt -> expr_stmt .)
    CASE            reduce using rule 11 (stmt -> expr_stmt .)
    OTHERWISE       reduce using rule 11 (stmt -> expr_stmt .)


state 6

    (12) stmt -> global_stmt .

    END             reduce using rule 12 (stmt -> global_stmt .)
    CONTINUE        reduce using rule 12 (stmt -> global_stmt .)
    BREAK           reduce using rule 12 (stmt -> global_stmt .)
    GLOBAL          reduce using rule 12 (stmt -> global_stmt .)
    IDENTIFIER      reduce using rule 12 (stmt -> global_stmt .)
    FOR             reduce using rule 12 (stmt -> global_stmt .)
    IF              reduce using rule 12 (stmt -> global_stmt .)
    SEMI            reduce using rule 12 (stmt -> global_stmt .)
    COMMA           reduce using rule 12 (stmt -> global_stmt .)
    RETURN          reduce using rule 12 (stmt -> global_stmt .)
    SWITCH          reduce using rule 12 (stmt -> global_stmt .)
    TRY             reduce using rule 12 (stmt -> global_stmt .)
    WHILE           reduce using rule 12 (stmt -> global_stmt .)
    NOTEQUAL        reduce using rule 12 (stmt -> global_stmt .)
    NOT             reduce using rule 12 (stmt -> global_stmt .)
    LBRACKET        reduce using rule 12 (stmt -> global_stmt .)
    NUMBER          reduce using rule 12 (stmt -> global_stmt .)
    STRING          reduce using rule 12 (stmt -> global_stmt .)
    COLON           reduce using rule 12 (stmt -> global_stmt .)
    LBRACE          reduce using rule 12 (stmt -> global_stmt .)
    MINUS           reduce using rule 12 (stmt -> global_stmt .)
    PLUS            reduce using rule 12 (stmt -> global_stmt .)
    FUNCTION        reduce using rule 12 (stmt -> global_stmt .)
    $end            reduce using rule 12 (stmt -> global_stmt .)
    ELSE            reduce using rule 12 (stmt -> global_stmt .)
    ELSEIF          reduce using rule 12 (stmt -> global_stmt .)
    CATCH           reduce using rule 12 (stmt -> global_stmt .)
    CASE            reduce using rule 12 (stmt -> global_stmt .)
    OTHERWISE       reduce using rule 12 (stmt -> global_stmt .)


state 7

    (10) stmt -> break_stmt .

    END             reduce using rule 10 (stmt -> break_stmt .)
    CONTINUE        reduce using rule 10 (stmt -> break_stmt .)
    BREAK           reduce using rule 10 (stmt -> break_stmt .)
    GLOBAL          reduce using rule 10 (stmt -> break_stmt .)
    IDENTIFIER      reduce using rule 10 (stmt -> break_stmt .)
    FOR             reduce using rule 10 (stmt -> break_stmt .)
    IF              reduce using rule 10 (stmt -> break_stmt .)
    SEMI            reduce using rule 10 (stmt -> break_stmt .)
    COMMA           reduce using rule 10 (stmt -> break_stmt .)
    RETURN          reduce using rule 10 (stmt -> break_stmt .)
    SWITCH          reduce using rule 10 (stmt -> break_stmt .)
    TRY             reduce using rule 10 (stmt -> break_stmt .)
    WHILE           reduce using rule 10 (stmt -> break_stmt .)
    NOTEQUAL        reduce using rule 10 (stmt -> break_stmt .)
    NOT             reduce using rule 10 (stmt -> break_stmt .)
    LBRACKET        reduce using rule 10 (stmt -> break_stmt .)
    NUMBER          reduce using rule 10 (stmt -> break_stmt .)
    STRING          reduce using rule 10 (stmt -> break_stmt .)
    COLON           reduce using rule 10 (stmt -> break_stmt .)
    LBRACE          reduce using rule 10 (stmt -> break_stmt .)
    MINUS           reduce using rule 10 (stmt -> break_stmt .)
    PLUS            reduce using rule 10 (stmt -> break_stmt .)
    FUNCTION        reduce using rule 10 (stmt -> break_stmt .)
    $end            reduce using rule 10 (stmt -> break_stmt .)
    ELSE            reduce using rule 10 (stmt -> break_stmt .)
    ELSEIF          reduce using rule 10 (stmt -> break_stmt .)
    CATCH           reduce using rule 10 (stmt -> break_stmt .)
    CASE            reduce using rule 10 (stmt -> break_stmt .)
    OTHERWISE       reduce using rule 10 (stmt -> break_stmt .)


state 8

    (58) expr_list -> exprs .
    (59) expr_list -> exprs . COMMA
    (61) exprs -> exprs . COMMA expr

    SEMI            reduce using rule 58 (expr_list -> exprs .)
    RBRACKET        reduce using rule 58 (expr_list -> exprs .)
    RBRACE          reduce using rule 58 (expr_list -> exprs .)
    COMMA           shift and go to state 55


state 9

    (15) stmt -> if_stmt .

    END             reduce using rule 15 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 15 (stmt -> if_stmt .)
    BREAK           reduce using rule 15 (stmt -> if_stmt .)
    GLOBAL          reduce using rule 15 (stmt -> if_stmt .)
    IDENTIFIER      reduce using rule 15 (stmt -> if_stmt .)
    FOR             reduce using rule 15 (stmt -> if_stmt .)
    IF              reduce using rule 15 (stmt -> if_stmt .)
    SEMI            reduce using rule 15 (stmt -> if_stmt .)
    COMMA           reduce using rule 15 (stmt -> if_stmt .)
    RETURN          reduce using rule 15 (stmt -> if_stmt .)
    SWITCH          reduce using rule 15 (stmt -> if_stmt .)
    TRY             reduce using rule 15 (stmt -> if_stmt .)
    WHILE           reduce using rule 15 (stmt -> if_stmt .)
    NOTEQUAL        reduce using rule 15 (stmt -> if_stmt .)
    NOT             reduce using rule 15 (stmt -> if_stmt .)
    LBRACKET        reduce using rule 15 (stmt -> if_stmt .)
    NUMBER          reduce using rule 15 (stmt -> if_stmt .)
    STRING          reduce using rule 15 (stmt -> if_stmt .)
    COLON           reduce using rule 15 (stmt -> if_stmt .)
    LBRACE          reduce using rule 15 (stmt -> if_stmt .)
    MINUS           reduce using rule 15 (stmt -> if_stmt .)
    PLUS            reduce using rule 15 (stmt -> if_stmt .)
